# gtaf-runtime-py

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  SPEC.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml
contract_fixtures/v0.1/: README.md
contract_fixtures/v0.1/deny_dr_mismatch/: artifacts.json  context.json  drc.json
contract_fixtures/v0.1/deny_expired_valid_until/: artifacts.json  drc.json  expected.json
contract_fixtures/v0.1/deny_invalid_drc_structure/: artifacts.json
contract_fixtures/v0.1/deny_missing_reference/: artifacts.json  drc.json  expected.json
contract_fixtures/v0.1/deny_outside_sb/: artifacts.json  context.json  expected.json
contract_fixtures/v0.1/deny_rb_required_missing/: artifacts.json  drc.json  expected.json
contract_fixtures/v0.1/deny_scope_leak/: artifacts.json  drc.json  expected.json
contract_fixtures/v0.1/happy_execute/: artifacts.json
docs/: projection-v0.1.md
gtaf_runtime/: __init__.py  enforce.py  errors.py  types.py
gtaf_runtime/schemas/: __init__.py  dr.schema.json  drc.schema.json  rb.schema.json  runtime_context.schema.json  sb.schema.json
schemas/: dr.schema.json  drc.schema.json  rb.schema.json  sb.schema.json
tests/: _fixture_paths.py  test_allow.py  test_contract_fixture_root_guard.py  test_deny.py  test_edge_cases.py  test_projection_v0_1_contract.py  test_projection_v0_1_fixtures.py
tests/fixtures/projection_v0_1/: README.md
tests/fixtures/projection_v0_1/deny_dr_mismatch/: expected.json
tests/fixtures/projection_v0_1/deny_invalid_drc_structure/: drc.json  expected.json
(+8 files in other folders)
