[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtaf-runtime"
version = "0.1.0"
description = "Reference implementation of the GTAF Runtime Enforcement Core"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"

authors = [
  { name = "TNT Intelligence", email = "contact@tnt-intelligence.com" }
]

dependencies = []

[project.urls]
Homepage = "https://gtaf.tnt-intelligence.com"
Repository = "https://github.com/TNT-Intelligence/gtaf-runtime-py"

[tool.setuptools.packages.find]
where = ["."]
include = ["gtaf_runtime*"]
exclude = ["tests*", "schemas*"]

[tool.setuptools.package-data]
gtaf_runtime = ["schemas/*.json"]
